--- a/DOOMSaveManager.csproj
+++ b/DOOMSaveManager.csproj
@@ -67,8 +67,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DoomEternalSave.cs" />
     <Compile Include="Crypto.cs" />
     <Compile Include="DoomEternal.cs" />
+    <Compile Include="DoomEternalSaveCollection.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
