--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
 </packages>
