--- a/DOOMSaveManager.csproj
+++ b/DOOMSaveManager.csproj
@@ -112,6 +112,7 @@
     <EmbeddedResource Include="SelectForm.resx">
       <DependentUpon>SelectForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include=".github\workflows\dotnet.yml" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
