--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -13,7 +13,7 @@ jobs:
         run: Install-Module 7Zip4PowerShell -Force -Verbose
         uses: actions/checkout@v2
 
-      — name: Setup Nuget.exe
+      - name: Setup Nuget.exe
         uses: warrenbuckley/Setup-Nuget@v1
 
       - name: Nuget Restore
