--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -11,7 +11,8 @@ jobs:
       - name: Install 7Zip PowerShell Module
         shell: powershell
         run: Install-Module 7Zip4PowerShell -Force -Verbose
-        uses: actions/checkout@v2
+      
+      - uses: actions/checkout@v2
 
       - name: Setup Nuget.exe
         uses: warrenbuckley/Setup-Nuget@v1
