--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build Artifact
         shell: cmd
-        run: call .\ArtifactBuild.cmd
+        run: call .\BuildArtifact.cmd
 
       - name: Create Release
         id: create_release
