Revert "Removed 7zip dependency"
This reverts commit 259229f1a5d0bd0f126452599550e06893296243.

--- a/DOOMSaveManager.csproj
+++ b/DOOMSaveManager.csproj
@@ -113,7 +113,7 @@
       <DependentUpon>SelectForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include=".github\workflows\dotnet-desktop.yml" />
-    <None Include="BuildBinary.cmd" />
+    <None Include="Build.cmd" />
     <None Include="BuildArtifact.cmd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
