--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -19,7 +19,7 @@ jobs:
       
       - name: Build Binary
         shell: cmd
-        run: call .\BuildBinary.cmd
+        run: call .\Build.cmd
 
       - name: Build Artifact
         shell: cmd
